# SZ3

./: .clang-format  .gitignore  CMakeLists.txt  notes.txt
analysis/: analysis.ipynb  sz3.config  sz3_interp.config
configs/: opt.config  opt_pred_off.config  opt_pred_on.config  sz3.config  sz3_pred.config  sz3_pred_off.config  sz3_pred_on.config
examples/: sz3.cpp
include/SZ3/api/: sz.hpp
include/SZ3/api/impl/: SZDispatcher.hpp  SZImpl.hpp  SZInterp.hpp  SZInterpTiny.hpp  SZLorenzoReg.hpp
include/SZ3/compressor/: Compressor.hpp  SZGeneralCompressor.hpp  SZInterpCompressorHelp.hpp  SZInterpolationCompressor.hpp  SZInterpolationCompressorOPT.hpp  SZInterpolationCompressorOPTPred.hpp  SZInterpolationCompressorPred.hpp  SZInterpolation_postprocess.hpp  SZInterpolation_postprocess____.hpp  SZTruncateCompressor.hpp
include/SZ3/compressor/deprecated/: SZBlockInterpolationCompressor.hpp
include/SZ3/frontend/: SZGeneralFrontend.hpp
include/SZ3/postprocess/: Postprocess.hpp  compensate_2d.hpp  error_interp_compressor.hpp  postprocess.hpp
include/SZ3/predictor/: ComposedPredictor.hpp  RegressionPredictor.hpp
include/SZ3/qoi/: QoIInfo.hpp  RegionalAverage.hpp
include/SZ3/quantizer/: IntegerQuantizer.hpp
include/SZ3/utils/: Accumulator.hpp  ByteUtil.hpp  Config.hpp  ErrorCompressConfig.hpp  Extraction_level.hpp  Interpolators.hpp  Iterator.hpp  Metrics.hpp  Sample.hpp  Statistic.hpp  critical_points.hpp  interpolation_level.hpp  interpolation_walk.hpp  qcat_ssim.hpp
include/encoder/: QoIEncoder.hpp
include/frontend/: SZ3QoIFrontend.hpp
include/qoi/: QoI.hpp  SquaredError.hpp  XSquare.hpp
include/quantizer/: QoIIntegerQuantizer.hpp
include/utils/: Config.hpp  Verification.hpp
test/: CMakeLists.txt  hpez.config  sz.config  sz_backend.hpp  sz_qoi.cpp
tools/artifact/: CMakeLists.txt
tools/artifact/include/: DisjointSet.hpp  block_detection.hpp  critical_points.hpp  data_preprocess.hpp  interpolation_walk.hpp  ndarray.hpp  ndindex.hpp  ndview.hpp  posterization.hpp
tools/artifact/src/: interp_detect.cpp  interp_detect_no_orig.cpp  test_block_detection.cpp  test_interp_error.cpp  test_interp_no_orig.cpp  test_interp_with_orig.cpp  test_posterization.cpp
tools/heated_wall/: CMakeLists.txt  heated_wall_test.cpp
tools/pysz/: pysz.py  test.py
tools/sz3/: CMakeLists.txt  analysis.ipynb  sz3 copy.bak  sz3.config  sz3.cpp
tools/sz3c/include/: sz3c.h
tools/sz3c/src/: sz3c.cpp
tools/test_quantizer/: CMakeLists.txt  test_quantize_with_pred.cpp  test_quantizer.cpp
